@@ -12,10 +12,12 @@ Release: 4.1.B2
 Date:
 ----------------------------------
 Bug Fixes:
+
 CAY-2550 Modeler: ObjAttribute inspector modifies wrong columns in attribute table
 CAY-2559 Modeler: Warning dialog shows wrong information after changing target entity in dbRelationship
 CAY-2561 Modeler: cgen type combobox doesn't set templates
 CAY-2564 No import for Property after generation classes with pk properties
+CAY-2566 Flush action generates update for PK attribute in case of toDepPK relationship
 
 ----------------------------------
 Release: 4.1.B1
